5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1593_2043.log
== TEST (2019-03-26 10:15:47) 
-- CODE:
var1=float(input("nota1:"))
var2=float(input("nota2: "))
var3=float(input("nota3: "))
var4=float(input("nota4: "))
total ((var1*1+var2*2+var3*3+var4*4)/10)
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    total ((var1*1+var2*2+var3*3+var4*4)/10)
NameError: name 'total' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 10:16:08) 
-- CODE:
var1=float(input("nota1:"))
var2=float(input("nota2: "))
var3=float(input("nota3: "))
var4=float(input("nota4: "))
total=((var1*1+var2*2+var3*3+var4*4)/10)
print(round(total,2))
-- EXECUTION TIME:
0.215757
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
